<resources>
    <string name="app_name">FoodDelivery</string>
    <string name="slogan">
Oziq-ovqatlarni buyurtma qilish va ularni Toshkent shahrida yetkazib berish xizmati</string>
    <string name="ro_yxatdan_o_tish">Ro\'yxatdan o\'tish</string>
    <string name="kirish">Kirish</string>
    <string name="telefon_hint">Telefon</string>
    <string name="parol">Parol</string>
    <string name="foydalanuvchi_topilmadi">Ushbu raqam ro\'yxatdan o\'tmagan</string>
    <string name="parol_xato">Parol noto\'gri. Iltimos qaytadan kiriting</string>
    <string name="ismingiz">Ismingiz</string>
    <string name="parol_tasdiqlash">Parolni tasdiqlash</string>
    <string name="chiqish">Chiqish</string>
    <string name="chiqishni_xohlaysizmi">Chindan ham ilovadan chiqmochimisiz?</string>
    <string name="xa">Xa</string>
    <string name="yoq">Yo\'q</string>
    <string name="barcha_maydoni_toldiring">Iltimos barcha maydonlarni to\'ldiring</string>
    <string name="ism_tekshirish">Ismingiz eng kamida uchta harfdan iborat bo\'lishi kerak</string>
    <string name="ism_faqat_harf">Iltimos ismga faqat harf kiriting</string>
    <string name="parol_kamida_besh_harf">Parol eng kamida 5 ta son yoki harfdan iborat bo\'lishi kerak</string>
    <string name="tasdiqlash_xatosi">Parolingiz va tasdiqlash paroli bir xil emas</string>
    <string name="iltimos_kuting">Iltimos kuting</string>
    <string name="oldin_royxatdan_otgan">Ushbu raqam oldin ham ro\'yxatdan o\'tgan</string>
    <string name="royxatdan_otmagan_raqam_kiriting">Bu raqam avval ham ro\'yxatdan o\'tgan</string>
    <string name="telefon_kiriting">Iltimos telefon raqam kiriting!</string>
    <string name="parol_kiriting">Iltimos parolni kiriting</string>
    <string name="raqamni_tekshiring">Telefon raqamingizni qaytadan tekshiring</string>
    <string name="tasdiqlash_uchun">Tasdiqlash uchun</string>
    <string name="sms_yuborildi">raqamiga SMS kod yuborildi</string>
    <string name="tasdiqlash">Tasdiqlash</string>
    <string name="xatolik">Xatolik yuz berdi</string>
    <string name="sms_kod_kiriting">Iltimos SMS kodni kiriting</string>
    <string name="sms_kod_notogri">SMS kod notog\'ri</string>
    <string name="tizimda_xatolik">Tizimda xatolik</string>

    <string name="open">Open navigation</string>
    <string name="close">Close navigation</string>
    <string name="taomlar_menyusi">Taomlar menyusi</string>
    <string name="xarid_savati">Xarid savati</string>
    <string name="buyurtmalar">Buyurtmalar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="taomlar">Taomlar</string>
    <string name="joriy_foydalanuvchi">\"Joriy foydalanuvchi \"</string>
    <string name="buyurtmachi">"Buyurtmachi: "</string>
    <string name="_1000">1000</string>
    <string name="taom_nomi">Taom nomi</string>
    <string name="taom_haqida">Taom haqida</string>
    <string name="taom_qoshildi">Taom xarid savatchaga qo\'shildi</string>
    <string name="tolov_summasi">To\'lov summasi:</string>
    <string name="buyurtma_qilish">Buyurtma qilish</string>
    <string name="_0_sum">0 sum</string>
    <string name="sum">sum</string>
    <string name="yana_bir_qadam">Yana bir qadam!</string>
    <string name="manzil_kiriting">Iltimos manzilni kiriting</string>
    <string name="buyurtma">Buyurtma qilish</string>
    <string name="qaytish">Qaytish</string>
    <string name="yetkazish_manzilini_kiriting">Iltimos yetkazib berish joyini kiriting</string>
    <string name="buyurtma_uchun_rahmat">Buyurtmangiz uchun rahmat!</string>
    <string name="holat">holat</string>
    <string name="phone_example">+99890123456</string>
    <string name="manzil">manzil</string>
    <string name="buyurtma_raqami">#buyurtma raqami</string>
    <string name="buyurtma_id">Maxsus ID: </string>
    <string name="qidirish">Taomni qidiring</string>
    <string name="_qidirish">Qidirish</string>
</resources>
