<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_menu"
            android:title="@string/taomlar_menyusi"
            android:checked="true"
            android:icon="@drawable/ic_menu"/>

        <item
            android:id="@+id/nav_cart"
            android:title="@string/xarid_savati"
            android:icon="@drawable/ic_cart"
            android:checkable="false"
            />

        <item
            android:id="@+id/nav_orders"
            android:title="@string/buyurtmalar"
            android:icon="@drawable/ic_orders"
            />
    </group>

    <group android:checkableBehavior="none">
            <item
                android:id="@+id/nav_sign_out"
                android:title="@string/chiqish"
                android:icon="@drawable/ic_exit"
                />
    </group>
</menu>