<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_micro"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="@dimen/margin_normal"
        android:layout_marginBottom="@dimen/margin_normal"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:orientation="vertical">

            <TextView
                android:id="@+id/order_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_micro"
                android:gravity="center_vertical|start"
                android:text="@string/holat"
                android:textAllCaps="true"
                android:textColor="@android:color/holo_green_light"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/order_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_micro"
                android:gravity="center_vertical|start"
                android:text="@string/buyurtma_raqami"
                android:textAllCaps="false"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/order_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_micro"
                android:gravity="center_vertical|start"
                android:text="@string/phone_example"
                android:textAllCaps="true"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/order_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_micro"
                android:gravity="center_vertical|start"
                android:text="@string/manzil"
                android:textAllCaps="false"
                android:textStyle="italic" />


        </LinearLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>