<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actvities.CartActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/xarid_savati"
        android:background="@color/colorPrimary"
        app:titleTextColor="@android:color/white"
        app:navigationIcon="@drawable/back_icon"
        />

    <RelativeLayout
        android:padding="@dimen/margin_normal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        >

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listCart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentBottom="true"
        app:cardBackgroundColor="@color/colorPrimary">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tolov_summasi"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textSize_normal"

                    />

                <TextView
                    android:id="@+id/tv_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_tiny"
                    android:text="@string/_0_sum"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textSize_medium"
                    android:textStyle="bold" />

            </LinearLayout>

            <info.hoang8f.widget.FButton
                android:id="@+id/btnPlaceOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_margin="@dimen/margin_medium"
                android:background="@color/btnSignActive"
                android:text="@string/buyurtma_qilish"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                app:cornerRadius="4dp"
                app:fButtonColor="@color/btnSignActive" />

        </RelativeLayout>


    </androidx.cardview.widget.CardView>

    </RelativeLayout>

</RelativeLayout>