<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:padding="@dimen/margin_medium"
    tools:context=".actvities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/logo_w"
            android:layout_height="@dimen/logo_w"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/textSlogan"
            android:layout_width="@dimen/logo_w"
            android:layout_height="wrap_content"
            android:text="@string/slogan"
            android:textAlignment="center"
            android:textColor="@android:color/white" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:weightSum="2">

        <info.hoang8f.widget.FButton
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_tiny"
            android:layout_weight="1"
            android:text="@string/ro_yxatdan_o_tish"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:cornerRadius="4dp"
            app:fButtonColor="@color/btnSignUp" />

        <info.hoang8f.widget.FButton
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_tiny"
            android:layout_weight="1"
            android:background="@color/btnSignActive"
            android:text="@string/kirish"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:cornerRadius="4dp"
            app:fButtonColor="@color/btnSignActive" />
    </LinearLayout>

</RelativeLayout>