<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actvities.FoodDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleTextAppearance="@android:color/transparent"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/img_food"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/taom_nomi"
                app:popupTheme="@style/Theme.AppCompat.Light"
                >

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_btn_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_cart"
        app:backgroundTint="@android:color/white"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="25dp"
        app:tint="@android:color/holo_red_dark"
        android:elevation="6dp"
        app:pressedTranslationZ="12dp"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|end|right"
        app:useCompatPadding="true"
        tools:targetApi="lollipop" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="false"
                >

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/food_name"
                        android:layout_marginTop="8dp"
                        android:padding="12dp"
                        android:text="@string/taom_nomi"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/textSize_medium"
                        android:textStyle="bold"
                        />

                    <LinearLayout
                        android:id="@+id/layout_price"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:src="@drawable/money_icon"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_gravity="center_vertical"
                            android:layout_height="wrap_content"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/food_price"
                            android:layout_weight="9"
                            android:text="@string/_1000"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/textSize_medium"
                            android:textStyle="bold"
                            />



                    </LinearLayout>

                    <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
                        android:layout_width="100dp"
                        android:layout_height="30dp"
                        android:id="@+id/elegant_btn"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="18dp"
                        app:textSize="4sp"
                        app:backGroundColor="@color/colorAccent"
                        app:initialNumber="1"
                        app:finalNumber="20"
                        tools:ignore="SmallSp" />

                </LinearLayout>



            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                app:cardUseCompatPadding="true"
                app:cardElevation="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/food_description"
                    android:layout_marginTop="12dp"
                    android:lineSpacingMultiplier="1.5"
                    android:padding="12dp"
                    android:text="@string/taom_haqida"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </androidx.cardview.widget.CardView>

        </LinearLayout>



    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>